# mprisRecord

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt
nix/: overlay.nix  shell.nix
nix/pkgs/: mpris2.nix  mprisRecord.nix
src/: record.py
